--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img class="my-pic" src="img/my pic.jpeg" alt="">
+        <img class="my-pic" src="my pic.jpeg" alt="">
         <h1 id="header-h1">Welcome to my portfolio !</h1>
         <h3 id="header-content">I am a Student of Software engineering in International Islamic University Islamabad.
             I am an outgoing and energetic (ask anybody) young professional, seeking a career that fits my professional skills, personality, and murderous tendencies.
